welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int =
{
  var max = nums.MIN_VALUE
  var max2 = minValue.MAX_VALUE
  
  for (i <- 1 to nums.length - 1)
  	if (max2 < nums(i) && nums(i) != max)
  		max2 = nums(i)
  
  return max2
}